[gd_scene load_steps=2 format=3 uid="uid://co7ella28iop2"]

[ext_resource type="Script" path="res://main_scenes/world_select/world_select_entry/world_select_entry.gd" id="1_4uij4"]

[node name="WorldSelectEntry" type="PanelContainer"]
offset_right = 595.0
offset_bottom = 47.0
script = ExtResource("1_4uij4")
world_seed = "world-seed"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "World Name"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/HBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/CenterContainer2/HBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Seed:"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/HBoxContainer/CenterContainer2/HBoxContainer"]
layout_mode = 2

[node name="SeedLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/CenterContainer2/HBoxContainer/CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 12
text = "world-seed"
fit_content = true
autowrap_mode = 0

[node name="Separater" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Select"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="MarginContainer/HBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
